Started writing javascript

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@ body{
 }
 .right{
     margin: 16px 0;
+    position: relative;
 }
 .nav{
     display: flex;
@@ -79,10 +80,15 @@ body{
     background-color: white;
     border-radius: 21px;
     color: black;
-    font-weight: bold;
+    /* font-weight: bold; */
+     font-size: 16px;
     padding: 10px;
     width: 79px;
     cursor: pointer;
+}
+.loginbtn:hover{
+    font-weight: bold;
+    font-size: 17px;
 }
 .header{
     background-color: rgb(34, 34, 34);
@@ -142,4 +148,16 @@ body{
     position: absolute;
     right: 17px;
     top: 163px;
+}
+.playbar{
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(26, 99, 26);
+    width: 100%;
+    padding: 12px;
+}
+.songbuttons{
+    display: flex;
+    justify-content: center;
+    gap: 16px;
 }
