--- a/style.css
+++ b/style.css
@@ -162,8 +162,28 @@ body{
     gap: 16px;
 }
 .songlist ul{
-    padding:0 42px ;
+    padding:0 3px ;
 }
 .songlist ul li{
     list-style-type:decimal;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    cursor: pointer;
+    padding: 7px 0;
+    border: 1px solid white;
+    margin: 12px 0;
+    padding:5px 10px;
+    border-radius: 5px;
+    font-size: smaller;
+}
+.playnow{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.playnow span{
+    font-size: 15px;
+    width: 64px;
+    padding: 8px 20px;
 }
