--- a/style.css
+++ b/style.css
@@ -150,16 +150,23 @@ body{
     top: 163px;
 }
 .playbar{
-    position: absolute;
-    bottom: 0;
-    background-color: rgb(244, 250, 244);
-    width: 90%;
+    position: fixed;
+    bottom: 30px;
+    filter: invert(1);
+    background-color: #dad5d5;
+    border-radius: 30px;
+    width: 70vw;
     padding: 12px;
 }
 .songbuttons{
     display: flex;
     justify-content: center;
     gap: 16px;
+}
+.songlist{
+    height: 544px;
+    overflow: auto;
+    margin-bottom: 44px;
 }
 .songlist ul{
     padding:0 3px ;
@@ -176,6 +183,10 @@ body{
     padding:5px 10px;
     border-radius: 5px;
     font-size: smaller;
+}
+.songlist .info{
+    font-size: 13px;
+    width: 344px;
 }
 .playnow{
     display: flex;
