--- a/style.css
+++ b/style.css
@@ -154,9 +154,10 @@ body{
     bottom: 30px;
     filter: invert(1);
     background-color: #dad5d5;
-    border-radius: 30px;
+    border-radius: 10px;
     width: 70vw;
     padding: 12px;
+    height: 40px;
 }
 .songbuttons{
     display: flex;
@@ -197,4 +198,23 @@ body{
     font-size: 15px;
     width: 64px;
     padding: 8px 20px;
+}
+.seekbar{
+    height: 2px;
+    width: 98%;
+    background: black;
+    position: absolute;
+    bottom: 0;
+    border-radius: 10px;
+    margin: 6px;
+}
+.circle{
+    width: 13px;
+    height: 13px;
+    border-radius: 13px;
+    background-color: black;
+    position: relative;
+    bottom: 6px;
+    left: 0%;
+    transition: left 0.5s;
 }
